--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -35,7 +35,8 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
-                class="header-links align-middle" style="text-align: center; color: #999" href="http://localhost:4000/library">Library</a></div>
+                class="header-links align-middle" style="text-align: center; color: #999"
+                href="http://localhost:4000/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
                 class="align-middle header-links" style="text-align: center; color: #999" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle" style="padding-top: 5px; padding-bottom: 5px"><a
@@ -110,20 +111,26 @@
                 </div>
 
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
+                    <div class="row" style="margin-bottom: 0px">
+                        <div class="col-sm-8">
+                            <h5 id="nameOfTheMiniCourse" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br>
+                            </h5>
+                            <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
+                                <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
+                                                                               style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
+                                <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
+                                                                             style="margin-top: 5px; font-weight: 500"></span>
+                            </p>
+                            <br>
+                            <p id="lessonDescription"
+                               style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
 
-                    <h5 id="nameOfTheMiniCourse" style=";margin-bottom: 7px; color: #444; font-weight: 500"><br></h5>
-                    <p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-                        <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
-                                                                       style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
-                        <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
-                                                                     style="margin-top: 5px; font-weight: 500"></span>
-                    </p>
-                    <br>
-                    <p id="lessonDescription"
-                       style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
-
-                    </p>
-
+                            </p></div>
+                        <div class="col-sm-4 text-center" style="padding-top: 30px;">
+                            <a id="bookmark" class="btn btn-success text-uppercase"
+                               style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">BOOKMARK</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">
