--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -95,7 +95,7 @@
 
     <div class="row" style="margin-bottom: 0px;">
         <div class="col-sm-12">
-            <div class="row"
+            <div class="row no-gutters"
                  style="padding: 20px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div class="col text-center">
                     <p><b>TEACHER</b></p>
@@ -131,6 +131,7 @@
                 <div class="col-sm-2 text-center" style="padding-top: 13px">
                     <a id="enroll" class="btn btn-success text-uppercase"
                        style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">Enroll</a>
+                    <p id="msg" style="padding-top: 10px;margin-bottom: 6px;"></p>
                 </div>
             </div>
         </div>
