--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -16,7 +16,7 @@
 
         let logoutfn = function () {
 
-            $.get('http://localhost:4000/logout', function (student) {
+            $.get('http://ec2-35-154-176-212.ap-south-1.compute.amazonaws.com:4000/logout', function (student) {
                 console.log(student);
                 window.location.replace(student.url);
             });
