--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -129,6 +129,7 @@
                         <div class="col-sm-4 text-center" style="padding-top: 30px;">
                             <a id="bookmark" class="btn btn-success text-uppercase"
                                style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">BOOKMARK</a>
+                            <p id="msg" style="padding-top: 10px;margin-bottom: 6px;"></p>
                         </div>
                     </div>
                 </div>
