--- a/public_html/students/mycourses/index.html
+++ b/public_html/students/mycourses/index.html
@@ -17,7 +17,7 @@
 
         let logoutfn = function () {
 
-            $.get('http://ec2-35-154-176-212.ap-south-1.compute.amazonaws.com:4000/logout', function (student) {
+            $.get('/logout', function (student) {
                 console.log(student);
                 window.location.replace(student);
             });
@@ -36,7 +36,7 @@
             <!--empty for search text box later-->
         </div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
-                class="header-links align-middle" href="http://localhost:4000/library">Library</a></div>
+                class="header-links align-middle" href="/library">Library</a></div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
                 class="align-middle header-links" href="#">Events</a></div>
         <div class=" col-sm-1 col-12 align-middle header-links-div"><a
@@ -52,8 +52,8 @@
             <img src="/images/boy.png" class="img-circle header-profile-img">
             <span id="name"></span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
-                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mycourses" class="header-links">My Courses</a></li>
-                <li class="header-dropdown-menu-li"><a href="http://localhost:4000/student/mybookmarks" class="header-links">My Bookmarks</a></li>
+                <li class="header-dropdown-menu-li"><a href="/student/mycourses" class="header-links">My Courses</a></li>
+                <li class="header-dropdown-menu-li"><a href="/student/mybookmarks" class="header-links">My Bookmarks</a></li>
                 <li class="header-dropdown-menu-li"><a onclick="logoutfn()" class="header-links" style="color: #999;">Logout</a></li>
             </ul>
         </div>
