--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -178,7 +178,7 @@
 
                     </ul>
                 </div>
-                <div class="col-sm-2 text-right filter-bar-clearall" onclick="window.location.replace('http://localhost:4000/library')">CLEAR ALL</div>
+                <div class="col-sm-2 text-right filter-bar-clearall" onclick="window.location.replace('/library')">CLEAR ALL</div>
             </div>
             <div class="row minicourses">
 
