--- a/public_html/admin/index.html
+++ b/public_html/admin/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <script src="/js/jquery-3.2.1.js"></script>
     <script src="./index.js"></script>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="dashboard/index.css">
 </head>
 <body>
 <div class="container">
