--- a/public_html/admin/dashboard/index.html
+++ b/public_html/admin/dashboard/index.html
@@ -5,12 +5,28 @@
     <title>Admin Page - MathonGo</title>
     <link rel="stylesheet" href="/css/bootstrap.css">
     <script src="/js/jquery-3.2.1.js"></script>
-    <script src="index2.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <script src="./index2.js"></script>
+    <link rel="stylesheet" href="./index.css">
+    <script>
+
+        let logoutfn = function () {
+            $.ajax({
+                url: '/logout',
+                headers: {"Authorization": "Bearer " + localStorage.token},
+                method: "GET"
+            }).done(function (user) {
+                localStorage.removeItem("token");
+                window.location.replace(user.url);
+            }).fail(function (err) {
+                console.log(err);
+            });
+        }
+    </script>
 </head>
 <body>
 <br>
-<h1 class="text-center">ADMIN PAGE</h1>
+<h1 class="text-center">ADMIN PAGE
+<a onclick="logoutfn()" class="btn buttons">Logout</a></h1>
 <br>
 <button class="btn buttons" id="classButton">Add a Class</button>
 <button class="btn buttons" id="subjectButton">Add a Subject</button>
