--- a/public_html/admin/index.html
+++ b/public_html/admin/index.html
@@ -21,16 +21,16 @@
             <br>
             <br>
             <label>
-                Name : <input type="text" id="name">
+                Name : <input type="text" id="name" required>
             </label><br>
             <label>
-                Email : <input type="text" id="email">
+                Email : <input type="text" id="email" required>
             </label><br>
             <label>
-                Password : <input type="text" id="password">
+                Password : <input type="password" id="password" required>
             </label><br>
             <label>
-                Secret : <input type="text" id="secret">
+                Secret : <input type="password" id="secret" required>
             </label><br>
             <button class="btn buttons" id="signup">Sign Up</button>
         </div>
@@ -42,7 +42,7 @@
                 Email : <input type="text" id="EmailLogin">
             </label><br>
             <label>
-                Password : <input type="text" id="PasswordLogin">
+                Password : <input type="password" id="PasswordLogin">
             </label><br>
             <button class="btn buttons" id="login">Log In</button>
         </div>
