--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -48,7 +48,7 @@
                 class="align-middle header-links" href="#">Teachers</a></div>
 
 
-        <div class="dropdown col-sm-2 col-12 align-middle header-dropdown">
+        <div id="userDetails" class="dropdown col-sm-2 col-12 align-middle header-dropdown">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <!-- <a href="#"><i class="fa fa-bell"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;-->
             &nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links"
