--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -54,7 +54,7 @@
             &nbsp;&nbsp;&nbsp;<a style="color: #222;" href="#" class="dropdown-toggle header-links"
                                              data-toggle="dropdown"
                                              role="button" aria-haspopup="true" aria-expanded="false">
-            <img src="./../images/boy.png" class="img-circle header-profile-img">
+            <img src="/images/boy.png" class="img-circle header-profile-img">
             <span id="name"></span> <span class="caret"></span></a>
             <ul class="dropdown-menu header-dropdown-menu">
                 <li class="header-dropdown-menu-li"><a href="/student/mycourses"
