--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -110,7 +110,7 @@
             <div class="row"
                  style="background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div class="col-sm-12 embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/a9GiapCfL_w"
+                    <iframe id="video" class="embed-responsive-item" src=""
                             allowfullscreen></iframe>
                 </div>
 
