added tutor addpath

--- a/public_html/admin/dashboard/index.html
+++ b/public_html/admin/dashboard/index.html
@@ -28,11 +28,12 @@
 <h1 class="text-center">ADMIN PAGE
 <a onclick="logoutfn()" class="btn buttons">Logout</a></h1>
 <br>
+<button class="btn buttons" id="tutorButton">Add a Tutor</button>
 <button class="btn buttons" id="classButton">Add a Class</button>
 <button class="btn buttons" id="subjectButton">Add a Subject</button>
-<button class="btn buttons" id="courseButton">Add a Course</button>
+<button class="btn buttons" id="chapterButton">Add a Chapter</button>
 <button class="btn buttons" id="categoryButton">Add a Category</button>
-<button class="btn buttons" id="minicourseButton">Add a Minicourse</button>
+<button class="btn buttons" id="courseButton">Course</button>
 <div id="container">
     <br>
     <form id="dataForm">
