--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -78,12 +78,10 @@
 
         <div class="container">
             <div class="row row-header">
-                <div class="col-xs-12 col-sm-6 offset-3 text-center">
-                    <h1 style="color: floralwhite" id="miniCourseName"></h1>
+                <div class="col-xs-12 col-sm-8 offset-2 text-center">
+                    <h2 style="color: floralwhite" id="miniCourseName"></h2>
                     <br>
-                    <p id="miniCourseDescription" style="color: floralwhite; font-size: x-large">Browse our collection
-                        of courses created by the
-                        best teachers of India</p>
+                    <p id="miniCourseDescription" style="color: floralwhite; font-size: large"></p>
 
                 </div>
             </div>
