--- a/public_html/admin/dashboard/index.html
+++ b/public_html/admin/dashboard/index.html
@@ -33,7 +33,7 @@
 <button class="btn buttons" id="subjectButton">Add a Subject</button>
 <button class="btn buttons" id="chapterButton">Add a Chapter</button>
 <button class="btn buttons" id="categoryButton">Add a Category</button>
-<button class="btn buttons" id="courseButton">Course</button>
+<button class="btn buttons" id="courseButton">Add a Course</button>
 <div id="container">
     <br>
     <form id="dataForm">
