--- a/public_html/admin/dashboard/index.html
+++ b/public_html/admin/dashboard/index.html
@@ -34,6 +34,7 @@
 <button class="btn buttons" id="chapterButton">Add a Chapter</button>
 <button class="btn buttons" id="categoryButton">Add a Category</button>
 <button class="btn buttons" id="courseButton">Course</button>
+<button class="btn buttons" id="viewCoursesButton">Course</button>
 <div id="container">
     <br>
     <form id="dataForm">
