finallyyyyyyyyy edit minicourse done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,26 +56,39 @@
                                                placeholder="Contact">
                                     </div>
                                     <div class="form-group">
-                                        <label class="radio-inline input-class">Class:</label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="8">&nbsp;VIII
-                                        </label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="9">&nbsp;IX
-                                        </label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="10">&nbsp;X
-                                        </label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="11">&nbsp;XI
-                                        </label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="12">&nbsp;XII
-                                        </label>
-                                        <label class="radio-inline label-style">
-                                            <input type="radio" name="class" value="13">&nbsp;XII Pass
-                                        </label>
-                                        <!--<label class="mr-2" for="class">Class : </label>-->
+                                        <input id="registerPincode" required type="text" class="form-control input"
+                                               placeholder="Pincode">
+                                    </div>
+                                    <div class="form-group">
+                                        <!--<label class="radio-inline input-class">Class:</label>-->
+                                        <select class="form-control">
+                                        <option>Class</option>
+                                            <option>VIII</option>
+                                            <option>IX</option>
+                                            <option>X</option>
+                                            <option>XI</option>
+                                            <option>XII</option>
+                                            <option>XII+</option>
+                                        </select>
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="8">&nbsp;VIII-->
+                                        <!--</label>-->
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="9">&nbsp;IX-->
+                                        <!--</label>-->
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="10">&nbsp;X-->
+                                        <!--</label>-->
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="11">&nbsp;XI-->
+                                        <!--</label>-->
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="12">&nbsp;XII-->
+                                        <!--</label>-->
+                                        <!--<label class="radio-inline label-style">-->
+                                            <!--<input type="radio" name="class" value="13">&nbsp;XII Pass-->
+                                        <!--</label>-->
+                                        <!--&lt;!&ndash;<label class="mr-2" for="class">Class : </label>&ndash;&gt;-->
                                         <!--<select id="class" class="custom-select mb-2">-->
                                         <!--<option selected>Choose...</option>-->
                                         <!--<option value="8">VIII</option>-->
