--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,16 +60,31 @@
                                                placeholder="Pincode">
                                     </div>
                                     <div class="form-group">
-                                        <!--<label class="radio-inline input-class">Class:</label>-->
-                                        <select class="form-control">
-                                        <option>Class</option>
-                                            <option>VIII</option>
-                                            <option>IX</option>
-                                            <option>X</option>
-                                            <option>XI</option>
-                                            <option>XII</option>
-                                            <option>XII+</option>
+
+                                        <label class="mr-3" for="class">Class : </label>
+                                        <select id="class" class="custom-select mb-2">
+                                        <option selected>Choose...</option>
+                                        <option value="8">VIII</option>
+                                        <option value="9">IX</option>
+                                        <option value="10">X</option>
+                                        <option value="11">XI</option>
+                                        <option value="12">XII</option>
+                                        <option value="13">XII Pass</option>
                                         </select>
+
+
+
+
+                                        <!--<label class="radio-inline input-class">Class:</label>-->
+                                        <!--<select class="form-control custom-select btn-outline-info">-->
+                                        <!--<option selected>Class</option>-->
+                                            <!--<option>VIII</option>-->
+                                            <!--<option>IX</option>-->
+                                            <!--<option>X</option>-->
+                                            <!--<option>XI</option>-->
+                                            <!--<option>XII</option>-->
+                                            <!--<option>XII+</option>-->
+                                        <!--</select>-->
                                         <!--<label class="radio-inline label-style">-->
                                             <!--<input type="radio" name="class" value="8">&nbsp;VIII-->
                                         <!--</label>-->
