--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,15 +61,15 @@
                                     </div>
                                     <div class="form-group">
 
-                                        <label class="mr-3" for="class">Class : </label>
+                                        <label class="mr-3" for="class" style="color: #D3D3D3; font-size: 1rem">Class : </label>
                                         <select id="class" class="custom-select mb-2">
                                         <option selected>Choose...</option>
-                                        <option value="8">VIII</option>
-                                        <option value="9">IX</option>
-                                        <option value="10">X</option>
-                                        <option value="11">XI</option>
-                                        <option value="12">XII</option>
-                                        <option value="13">XII Pass</option>
+                                        <option value="VIII">VIII</option>
+                                        <option value="IX">IX</option>
+                                        <option value="X">X</option>
+                                        <option value="XI">XI</option>
+                                        <option value="XII">XII</option>
+                                        <option value="XII Pass">XII Pass</option>
                                         </select>
 
 
