--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,14 +11,14 @@
 <body>
 <div class="container-fluid">
     <div>
-        <img src="images/logo.png" style="position: absolute ; top: 20px; left: 20px; height: 50px ; z-index: 1">
+        <img src="images/coverlogo.png" style="position: absolute ; top: 20px; left: 20px; height: 50px ; z-index: 1">
     </div>
     <div class="row no-gutters">
-        <div class="col-sm-8">
-            <img class="img-fluid cover" src="./images/cover_unacademy.jpg" alt="Cover Picture">
+        <div class="col-sm-7 cover">
+            <img class="img-fluid " style="width: 100%; position: relative; top: 10%;" src="./images/coverimg.png" alt="Cover Picture">
         </div>
 
-        <div class="col-sm-4" id="info">
+        <div class="col-sm-5" id="info">
             <!--<div class="row justify-content-center">-->
 
             <div class="col-sm-12">
