--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,11 +11,13 @@
 <body>
 <div class="container-fluid">
     <div>
-        <img src="images/coverlogo.png" style="position: absolute ; top: 20px; left: 20px; height: 50px ; z-index: 1">
+        <img src="images/coverlogo.png" style="position: absolute ; top: 20px; left: 20px; height: 45px ; z-index: 1">
     </div>
     <div class="row no-gutters">
         <div class="col-sm-7 cover">
-            <img class="img-fluid " style="width: 100%; position: relative; top: 10%;" src="./images/coverimg.png" alt="Cover Picture">
+            <img class="img-fluid " style="width: 100%; position: relative; top: 10%;" src="./images/illustration-2.png" alt="Cover Picture">
+            <br>
+            <br>
         </div>
 
         <div class="col-sm-5" id="info">
