--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,14 +13,24 @@
     <div>
         <img src="images/coverlogo.png" style="position: absolute ; top: 20px; left: 20px; height: 45px ; z-index: 1">
     </div>
-    <div class="row no-gutters">
-        <div class="col-sm-7 cover">
-            <img class="img-fluid " style="width: 100%; position: relative; top: 10%;" src="./images/illustration-2.png" alt="Cover Picture">
-            <br>
-            <br>
+    <div class="row no-gutters text-center">
+        <div class="col-sm-7 cover" style="padding-top: 65px">
+            <img class="img-fluid " style="width: 100%; position: relative; top: 10%;" src="./images/illustration-2.png"
+                 alt="Cover Picture">
+            <br><br>
+            <div style="padding-right: 80px; padding-left: 80px">
+                <h2 style="color: white">Be smart.</h2>
+                <h2 style="color: white">Be successful.</h2>
+                <br>
+                <p style="color: whitesmoke;">Explore our top notch courses created by Indis's best educators designed
+                    to boost your exam preparation</p>
+                <br>
+                <br>
+            </div>
+            <p style="color: #DDD; bottom: 10px">Privacy Policy &nbsp;&nbsp;&nbsp;&nbsp; About Us &nbsp;&nbsp;&nbsp;&nbsp;Contact &nbsp;&nbsp;&nbsp;&nbsp; Facebook &nbsp;&nbsp;&nbsp;&nbsp; Twitter&nbsp;&nbsp;&nbsp;&nbsp; Youtube</p>
         </div>
 
-        <div class="col-sm-5" id="info">
+        <div class="col-sm-5" id="info" style="padding-left: 70px; padding-right: 70px">
             <!--<div class="row justify-content-center">-->
 
             <div class="col-sm-12">
@@ -44,10 +54,12 @@
                                 <br>
                                 <form id="registerForm">
                                     <div class="form-group">
-                                        <input id="registerName" required type="text" class="form-control input" placeholder="Full Name">
+                                        <input id="registerName" required type="text" class="form-control input"
+                                               placeholder="Full Name">
                                     </div>
                                     <div class="form-group">
-                                        <input id="registerEmail" required type="email" class="form-control input" placeholder="Email">
+                                        <input id="registerEmail" required type="email" class="form-control input"
+                                               placeholder="Email">
                                     </div>
                                     <div class="form-group">
                                         <input id="registerPassword" required type="password" class="form-control input"
@@ -63,47 +75,46 @@
                                     </div>
                                     <div class="form-group">
 
-                                        <label class="mr-3" for="class" style="color: #D3D3D3; font-size: 1rem">Class : </label>
+                                        <label class="mr-3" for="class" style="color: #D3D3D3; font-size: 1rem">Class
+                                            : </label>
                                         <select id="class" class="custom-select mb-2">
-                                        <option selected>Choose...</option>
-                                        <option value="VIII">VIII</option>
-                                        <option value="IX">IX</option>
-                                        <option value="X">X</option>
-                                        <option value="XI">XI</option>
-                                        <option value="XII">XII</option>
-                                        <option value="XII Pass">XII Pass</option>
+                                            <option selected>Choose...</option>
+                                            <option value="VIII">VIII</option>
+                                            <option value="IX">IX</option>
+                                            <option value="X">X</option>
+                                            <option value="XI">XI</option>
+                                            <option value="XII">XII</option>
+                                            <option value="XII Pass">XII Pass</option>
                                         </select>
-
-
 
 
                                         <!--<label class="radio-inline input-class">Class:</label>-->
                                         <!--<select class="form-control custom-select btn-outline-info">-->
                                         <!--<option selected>Class</option>-->
-                                            <!--<option>VIII</option>-->
-                                            <!--<option>IX</option>-->
-                                            <!--<option>X</option>-->
-                                            <!--<option>XI</option>-->
-                                            <!--<option>XII</option>-->
-                                            <!--<option>XII+</option>-->
+                                        <!--<option>VIII</option>-->
+                                        <!--<option>IX</option>-->
+                                        <!--<option>X</option>-->
+                                        <!--<option>XI</option>-->
+                                        <!--<option>XII</option>-->
+                                        <!--<option>XII+</option>-->
                                         <!--</select>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="8">&nbsp;VIII-->
+                                        <!--<input type="radio" name="class" value="8">&nbsp;VIII-->
                                         <!--</label>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="9">&nbsp;IX-->
+                                        <!--<input type="radio" name="class" value="9">&nbsp;IX-->
                                         <!--</label>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="10">&nbsp;X-->
+                                        <!--<input type="radio" name="class" value="10">&nbsp;X-->
                                         <!--</label>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="11">&nbsp;XI-->
+                                        <!--<input type="radio" name="class" value="11">&nbsp;XI-->
                                         <!--</label>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="12">&nbsp;XII-->
+                                        <!--<input type="radio" name="class" value="12">&nbsp;XII-->
                                         <!--</label>-->
                                         <!--<label class="radio-inline label-style">-->
-                                            <!--<input type="radio" name="class" value="13">&nbsp;XII Pass-->
+                                        <!--<input type="radio" name="class" value="13">&nbsp;XII Pass-->
                                         <!--</label>-->
                                         <!--&lt;!&ndash;<label class="mr-2" for="class">Class : </label>&ndash;&gt;-->
                                         <!--<select id="class" class="custom-select mb-2">-->
@@ -119,7 +130,9 @@
                                     <div id="errorRegister" class="text-danger">
                                     </div>
                                     <div class="form-group">
-                                        <button id="registerButton" class="btn btn-lg btn-block btn-info btn-style">Register</button>
+                                        <button id="registerButton" class="btn btn-lg btn-block btn-info btn-style">
+                                            Register
+                                        </button>
                                     </div>
                                 </form>
                             </div>
@@ -132,10 +145,12 @@
                                 <br>
                                 <form id="loginForm">
                                     <div class="form-group">
-                                        <input id="loginEmail" type="email" class="form-control input" placeholder="Email">
+                                        <input id="loginEmail" type="email" class="form-control input"
+                                               placeholder="Email">
                                     </div>
                                     <div class="form-group">
-                                        <input id="loginPassword" type="password" class="form-control input" placeholder="Password">
+                                        <input id="loginPassword" type="password" class="form-control input"
+                                               placeholder="Password">
                                     </div>
                                     <div id="errorLogin" class="text-danger">
                                     </div>
@@ -143,7 +158,8 @@
 
                                     </div>
                                     <div class="form-group">
-                                        <button id="loginButton" class="btn btn-info btn-block btn-lg btn-style">Login</button>
+                                        <button id="loginButton" class="btn btn-info btn-block btn-lg btn-style">Login
+                                        </button>
                                     </div>
                                 </form>
 
