Update Admin Dashboard
Signed-off-by: Bhavya Aggarwal <bhavyaaggarwal1209@gmail.com>

--- a/public_html/admin/dashboard/index.html
+++ b/public_html/admin/dashboard/index.html
@@ -29,6 +29,7 @@
 <a onclick="logoutfn()" class="btn buttons">Logout</a></h1>
 <br>
 <button class="btn buttons" id="tutorButton">Add a Tutor</button>
+<button class="btn buttons" id="viewTutorsButton">View Tutors</button>
 <button class="btn buttons" id="classButton">Add a Class</button>
 <button class="btn buttons" id="subjectButton">Add a Subject</button>
 <button class="btn buttons" id="chapterButton">Add a Chapter</button>
