--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -213,7 +213,7 @@
             <div class="row"
                  style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
                 <div class="col-sm-12 text-center">
-                    <img id="teacherImage" alt="Tutor Image" src="/images/icons/tutor.png">
+                    <img id="teacherImage" alt="Tutor Image" src="/images/user-image.jpg">
                     <p style="color: #848589" id="nameOfTheTeacher"></p>
                     <p style="color: #848589;" id="teacherDescription"></p>
                 </div>
