--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -72,7 +72,7 @@
 
     </div>
 
-    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(/images/bg.jpg)">
+    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(/images/header-pattern.png)">
 
         <!-- Main component for a primary marketing message or call to action -->
 
