--- a/public_html/students/mybookmarks/index.html
+++ b/public_html/students/mybookmarks/index.html
@@ -80,7 +80,7 @@
         <!--</div>-->
 
     </div>
-    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(/images/bg.jpg)">
+    <header class="jumbotron" style=" margin-bottom: 0; background-image: url(/images/header-pattern.png)">
 
         <!-- Main component for a primary marketing message or call to action -->
 
