Update minicourse table
Signed-off-by: Bhavya Aggarwal <bhavyaaggarwal1209@gmail.com>

--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -137,7 +137,7 @@
     </div>
 
     <div class="row" style="margin-top: 35px;">
-        <div class="col-sm-9">
+        <div class="col-sm-8">
             <p><b>Lectures</b></p>
             <div>
                 <div id="lectures" class="row"
@@ -208,10 +208,10 @@
 
             <!--</div>-->
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4">
             <p><b>Teacher</b></p>
             <div class="row"
-                 style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">
+                 style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem;margin-bottom: 35px">
                 <div class="col-sm-12 text-center">
                     <img id="teacherImage" alt="Tutor Image" style="border-radius: 50%" src="/images/user-image.jpg">
                     <br><br>
@@ -220,13 +220,13 @@
                 </div>
             </div>
 
-            <!--<p><b>Reviews</b></p>-->
-            <!--<div class="row"-->
-            <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
-            <!--</div>-->
+            <p><b>Reviews</b></p>
+            <div class="row"
+            style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem;margin-bottom: 35px">
+            </div>
 
             <!--<p><b>Doubts</b></p>-->
-            <!--<div clas   s="row"-->
+            <!--<div class="row"-->
             <!--style="padding: 15px; background-color: white; height:auto; box-shadow: #DDD 0 0 8px 1px ; border-radius: .125rem">-->
             <!--</div>-->
         </div>
