--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -6,7 +6,7 @@
     <title>MathonGo Library</title>
 
     <link rel="stylesheet" href="/css/bootstrap.css">
-
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./library.css">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="/js/jquery-3.2.1.js"></script>
@@ -35,7 +35,7 @@
 
     <div class="row no-gutters align-content-center header-bar" id="header-bar">
         <div class="col-sm-2 col-12">
-            <img src="./../images/logo.png" class="header-logo">
+            <img src="../images/logo.png" class="header-logo">
         </div>
         <div class="col-sm-3 offset-2 col-12">
             <!--empty for search text box later-->
