--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,12 +6,13 @@
     <title>MathonGo</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/landing-page.css">
 </head>
 <body>
 <div class="container-fluid">
     <div>
-        <img src="images/coverlogo.png" style="position: absolute ; top: 20px; left: 20px; height: 45px ; z-index: 1">
+        <img src="images/logo-light.png" style="position: absolute ; top: 20px; left: 20px; height: 45px ; z-index: 1">
     </div>
     <div class="row no-gutters text-center">
         <div class="col-sm-7 cover" style="padding-top: 65px">
