--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Lesson</title>
     <link rel="stylesheet" href="/css/bootstrap.css">
-
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./index.css">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <script src="/js/jquery-3.2.1.js"></script>
