--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -6,6 +6,7 @@
     <title>MathonGo Library</title>
 
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./library.css">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
