--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lesson</title>
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./index.css">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
