--- a/public_html/students/mycourses/index.html
+++ b/public_html/students/mycourses/index.html
@@ -6,6 +6,7 @@
     <title>My Courses</title>
 
     <link rel="stylesheet" href="/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="index.css">
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet">
