--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -139,70 +139,25 @@
 
     <div class="row" style="margin-top: 35px;">
         <div class="col-sm-8">
-            <p><b>Lectures</b></p>
-            <div>
+
+            <ul class="nav nav-tabs nav-justified " role="tablist">
+                <li class="nav-item" style="width: inherit">
+                    <a class="nav-link active nav-style a-style" data-toggle="tab"
+                       href="#lectures">lectures</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-style a-style" data-toggle="tab" href="#lectures">material</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-style a-style" data-toggle="tab" href="#lectures">reviews</a>
+                </li>
+            </ul>
+
                 <div id="lectures" class="row"
                      style="background-color: white; box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem; margin-bottom: 30px">
-                    <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                    <!--<div class="row" style="margin-bottom: 0px">-->
-                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                    <!--<img src="/images/icons/movie.png">-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-10">-->
-                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                    <!--<img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"-->
-                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-1">-->
-                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                    <!--<div class="row" style="margin-bottom: 0px">-->
-                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                    <!--<img src="/images/icons/movie.png">-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-10">-->
-                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
-                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-1">-->
-                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-12" style="height: auto;padding: 20px;border-bottom: solid 2px #EEEEEE;">-->
-                    <!--<div class="row" style="margin-bottom: 0px">-->
-                    <!--<div class="col-sm-1" style="padding-left: 0px">-->
-                    <!--<img src="/images/icons/movie.png">-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-10">-->
-                    <!--<h5 style=";margin-bottom: 7px; color: #444; font-weight: 500">1. Introduction<br></h5>-->
-                    <!--<p style="font-size: 14px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">-->
-                    <!--<img src="/images/icons/timer.png">&nbsp;<span-->
-                    <!--style="margin-top: 5px; font-weight: 500">3 min</span>&nbsp;&nbsp;-->
-                    <!--<img src="/images/icons/eye.png">&nbsp;<span-->
-                    <!--style="margin-top: 5px; font-weight: 500">12K</span>-->
-                    <!--</p>-->
-                    <!--</div>-->
-                    <!--<div class="col-sm-1">-->
-                    <!--<img src="/images/icons/arrow-right-drop-circle-green.png">-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--</div>-->
+
                 </div>
 
-            </div>
             <!--<p><b>Materials</b></p>-->
             <!--<div class="row"-->
             <!--style="height: auto;background-color: white;box-shadow: #DDD 0 0px 8px 1px ; border-radius: .125rem;margin-bottom: 30px; padding: 15px">-->
@@ -235,10 +190,6 @@
 
 </div>
 
-<!--<script src="./../js/jquery-3.2.1.js"></script>-->
-
-<!--<script src="./../js/bootstrap.js"></script>-->
-<!--<script src="./library.js"></script>-->
 </body>
 
 </html>
