lessons page update
Signed-off-by: Apoorvaa Gupta <apoorvaagupta01@gmail.com>

--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -133,8 +133,8 @@
                             </p></div>
                         <div class="col-sm-4 text-center" style="">
                             <div style="height: 50px; margin-bottom: 15px">
-                                <img src="/images/thumb-up-gray.png"> <span style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9">Upvote</span>
-                                <img src="/images/report.png"> <span style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9">Report</span>
+                                 <span id="upvote" style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9; cursor: pointer"><img  id="upvote-logo" src="/images/thumb-up-gray.png"> Upvote</span>
+                                <span id="report" style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9; cursor: pointer"><img src="/images/report.png"> Report</span>
                             </div>
                             <a id="bookmark" class="btn btn-success text-uppercase"
                                style="background-color:#4bca81;padding: 10px 45px;color: white;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px">BOOKMARK</a>
