--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -153,10 +153,10 @@
             <ul class="nav nav-tabs" role="tablist" style="margin-bottom: 2px">
                 <li class="nav-item">
                     <a class="nav-link active nav-style a-style" data-toggle="tab"
-                       href="#lecturesTab"><p><b>Lectures&nbsp;&nbsp;</b></p></a>
+                       href="#lecturesTab"><p><b>Lectures&nbsp;&nbsp;&nbsp;&nbsp;</b></p></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-style a-style" data-toggle="tab" href="#materialsTab"><p><b>Materials&nbsp;&nbsp;</b></p></a>
+                    <a class="nav-link nav-style a-style" data-toggle="tab" href="#materialsTab"><p><b>Materials&nbsp;&nbsp;&nbsp;&nbsp;</b></p></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-style a-style" data-toggle="tab" href="#reviewsTab"><p><b>Reviews</b></p></a>
