--- a/public_html/lesson/index.html
+++ b/public_html/lesson/index.html
@@ -123,7 +123,7 @@
                             <p style="font-size: 12px;font-weight: 400;margin-bottom: 0px;color: #A4A5A9">
                                 <img src="/images/icons/timer.png">&nbsp;<span id="durationOfMiniCourse"
                                                                                style="margin-top: 5px; font-weight: 500"></span>&nbsp;&nbsp;
-                                <img src="/images/icons/eye.png">&nbsp;<span id="lessonViews"
+                                <img src="/images/thumb-up-gray.png">&nbsp;<span id="totalUpvotes"
                                                                              style="margin-top: 5px; font-weight: 500"></span>
                             </p>
                             <br>
@@ -133,7 +133,7 @@
                             </p></div>
                         <div class="col-sm-4 text-center" style="">
                             <div style="height: 50px; margin-bottom: 15px">
-                                 <span id="upvote" style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9; cursor: pointer"><img  id="upvote-logo" src="/images/thumb-up-gray.png"> Upvote</span>
+                                <span id="upvote" style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9; cursor: pointer"><img  id="upvote-logo" src="/images/thumb-up-gray.png"> <span id="upvote-text">Upvote</span></span>
                                 <span id="report" style="font-size: 13px;font-weight: 500;margin-bottom: 0px;color: #A4A5A9; cursor: pointer"><img src="/images/report.png"> Report</span>
                             </div>
                             <a id="bookmark" class="btn btn-success text-uppercase"
