--- a/public_html/allMiniCourses/index.html
+++ b/public_html/allMiniCourses/index.html
@@ -79,9 +79,9 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-6 offset-3 text-center">
-                    <h1 class="jumbotron-title">Library</h1>
+                    <h1 style="color: floralwhite;font-size: 42px" class="jumbotron-title">Library</h1>
                     <br>
-                    <p class="jumbotron-description">Browse our collection of courses created by the
+                    <p class="jumbotron-description" style="color: floralwhite; font-size: 22px">Browse our collection of courses created by the
                         best teachers of India</p>
                 </div>
             </div>
