--- a/public_html/minicourse/index.html
+++ b/public_html/minicourse/index.html
@@ -135,10 +135,14 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-xs-12 col-sm-8 offset-2 text-center">
-                    <h2 style="color: floralwhite" id="miniCourseName"></h2>
+                    <h2 style="color: floralwhite;font-size: 28px" id="miniCourseName"></h2>
                     <br>
-                    <p id="miniCourseDescription" style="color: floralwhite; font-size: large"></p>
-
+                    <p id="miniCourseDescription" style="color: floralwhite; font-size: 16px"></p>
+                    <div class="text-center" style="padding-top: 13px;margin: 0 auto">
+                    <a id="enroll" class="btn text-uppercase"
+                    style="padding: 10px 45px;font-size: 12px;font-weight: 700;cursor: pointer;width: auto;border-radius: 100px;border: 1px solid white">Enroll</a>
+                    <p id="msg" style="color: white;padding-top: 10px;margin-bottom: 6px;"></p>
+                    </div>
                 </div>
             </div>
         </div>
